# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2015-09-19 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add more details to the hello_world5 example.
    * Update the other examples to have reltool.config comments and modelines
    * Fix Elixir.HelloWorld1 example

2015-09-16 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add cloudi_trans_id for Erlang usage of the
      CloudI service request transaction id
    * Update uuid

2015-09-11 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Update trie
    * Fix parameter parsing due to pattern matching with the
      service name and service name pattern with functions like
      cloudi_service_name:parse/2 (now "*/" will parse "//" AND "///")
    * Handle bad parameters as a crash in cloudi_service_http_rest

2015-09-10 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix URL parameter errors in cloudi_service_http_rest

2015-09-08 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix application_name service configuration option usage when
      automatic_loading is false

2015-09-05 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add more comments to the hello_world5 example

2015-09-04 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add terminate, debug and debug_level configuration arguments to
      cloudi_service_http_rest
    * Improve example hello_world5
    * Fix README file

2015-09-03 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add msgpack as a supported content-type
    * Add eunit tests to cloudi_string
    * Add cloudi_service_http_rest to simplify REST API function creation

2015-09-02 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix installation path bug
    * Update examples description

2015-09-01 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix examples so that the 1.4.0 cloudi_service behaviour interface
      is used
    * Fix service application header file usage of cloudi_service behaviour